--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -2,6 +2,7 @@
 <html ng-app="shopping">
     <head lang="de">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <title>Einkaufsliste</title>
         <style>[ng-cloak] {
             display: none;
