--- a/src/main/resources/public/navigation/navigation.html
+++ b/src/main/resources/public/navigation/navigation.html
@@ -1,6 +1,6 @@
 <div class="navbar-inner col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
     <div class="navbar-header">
-        <button type="button" ng-show="modules.length > 0" class="navbar-toggle btn navbar-btn"
+        <button type="button" class="navbar-toggle btn navbar-btn"
                 ng-init="navCollapsed = true"
                 ng-click="navCollapsed = !navCollapsed">
             <span class="sr-only">Toggle navigation</span>
@@ -8,11 +8,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
+        <ul class="nav navbar-nav pull-right visible-xs">
+            <li ng-show="authenticated"><a href="#/logout">{{user}} | Logout</a></li>
+            <li ng-show="!authenticated && !isActive('/login')"><a href="#/login">Login</a></li>
+        </ul>
         <div>
             <a class="navbar-brand" href="#/" title="home">Einkaufsliste</a>
         </div>
     </div>
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-right hidden-xs">
         <li ng-show="authenticated"><a href="#/logout">{{user}} | Logout</a></li>
         <li ng-show="!authenticated && !isActive('/login')"><a href="#/login">Login</a></li>
     </ul>
