--- a/src/main/resources/public/authentication/login/login.html
+++ b/src/main/resources/public/authentication/login/login.html
@@ -1,6 +1,6 @@
 <h1>Login</h1>
 <div class="alert alert-danger" ng-show="error">
-    Der Login war nicht erfolgreich. Bitte versuche es erneut.
+    Der Login war nicht erfolgreich. Bitte beachten Sie Groß- und Kleinschreibung des Benutzernamens.
 </div>
 <div>
     <form role="form" ng-submit="login()">
