--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -24,9 +24,41 @@
         <script type="text/javascript" src="shoppingList/itemStore.js"></script>
         <script type="text/javascript" src="shoppingList/shoppingList.js"></script>
     </head>
-    <body ng-controller="navigation">
-        <navbar class="navbar-default navbar-fixed-top" role="navigation" ng-include
-                src="'navigation/navigation.html'"></navbar>
+    <body ng-controller="navigation as nav">
+        <navbar class="navbar-default navbar-fixed-top">
+            <div class="navbar-inner col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle btn navbar-btn"  ng-click="navCollapsed = !navCollapsed">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <p class="navbar-text pull-right visible-xs">{{user}}</p>
+                    <div>
+                        <a class="navbar-brand" href="#/" title="home"><span class="glyphicon glyphicon-shopping-cart"
+                                                                             aria-hidden="true"> Einkaufsliste </span></a>
+                    </div>
+                </div>
+                <ul collapse="navCollapsed" class="nav navbar-nav navbar-left navbar-collapse">
+                    <li ng-class="{ active: isActive('/Abrechnung')}">
+                        <a href="#/abrechnung">Abrechnung</a>
+                    </li>
+                    <li ng-class="{ active: isActive('/Artikel')}">
+                        <a href="#/artikel">Artikelliste</a>
+                    </li>
+                </ul>
+                <div class="navbar-right">
+                    <p class="navbar-text hidden-xs">{{user}}</p>
+                    <ul ng-hide="hideLoginLogoutNav()" collapse="navCollapsed" class="nav navbar-nav navbar-collapse">
+                        <li ng-show="showLogoutNav()"><a href="#/logout">Logout <span class="glyphicon glyphicon-log-out"
+                                                                                      aria-hidden="true"></span></a></li>
+                        <li ng-show="showLoginNav()"><a href="#/login">Login <span
+                                class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a></li>
+                    </ul>
+                </div>
+            </div>
+        </navbar>
         <div class="content col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8" ng-view></div>
     </body>
 </html>
