--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -12,10 +12,11 @@
             <input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
             <label for="toggle-all">Alle</label>
             <ul id="shopping-list">
-                <li ng-repeat="item in items">
+                <li ng-repeat="item in items | filter:statusFilter track by $index">
                     <div class="view" ng-hide="item.editing">
                         <input class="toggle" type="checkbox" ng-model="item.bought" ng-change="toggleBought(item)">
-                        <label ng-class="{ done: item.bought}"ng-click="toggleBought(item)">{{item.article.name}}</label>
+                        <label ng-class="{ done: item.bought}"
+                               ng-click="toggleBought(item)">{{item.article.name}}</label>
                         <div class="pull-right">
                             <button class="invisible-button" ng-click="startEditing(item)">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
