added accounting and aritcles blank pages, had to restructure routing because of params

--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -40,13 +40,13 @@
             </span>
             <ul id="filters">
                 <li>
-                    <a ng-class="{selected: status == ''} " href="#/">Alle</a>
+                    <a ng-class="{selected: status == ''} " href="#/einkaufsliste">Alle</a>
                 </li>
                 <li>
-                    <a ng-class="{selected: status == 'toBuy'}" href="#/verbleibend">Verbleibend</a>
+                    <a ng-class="{selected: status == 'toBuy'}" href="#/einkaufsliste/verbleibend">Verbleibend</a>
                 </li>
                 <li>
-                    <a ng-class="{selected: status == 'bought'}" href="#/gekauft">Gekauft</a>
+                    <a ng-class="{selected: status == 'bought'}" href="#/einkaufsliste/gekauft">Gekauft</a>
                 </li>
             </ul>
         </footer>
