--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -23,6 +23,8 @@
     <script type="text/javascript" src="articles/articleStore.js"></script>
     <script type="text/javascript" src="shoppingList/itemStore.js"></script>
     <script type="text/javascript" src="shoppingList/shoppingList.js"></script>
+    <script type="text/javascript" src="articles/article.js"></script>
+    <script type="text/javascript" src="accounting/accounting.js"></script>
 </head>
 <body ng-controller="navigation as nav">
 <navbar class="navbar-default navbar-fixed-top">
