fix the isActive function

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -39,25 +39,38 @@
             <p class="navbar-text pull-right visible-xs">{{user}}</p>
 
             <div>
-                <a class="navbar-brand" href="#/" title="home"><span class="glyphicon glyphicon-shopping-cart"
-                                                                     aria-hidden="true"> Einkaufsliste </span></a>
+                <a class="navbar-brand" href="#/" title="home">
+                    <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"> Einkaufsliste </span>
+                </a>
             </div>
         </div>
         <ul collapse="navCollapsed" class="nav navbar-nav navbar-left navbar-collapse">
-            <li ng-class="{ active: isActive('/Abrechnung')}">
+
+            <li ng-class="{ active: isActive('/einkaufsliste')}">
+                <a href="#/einkaufsliste">
+                    <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
+                </a>
+            </li>
+            <li ng-class="{ active: isActive('/abrechnung')}">
                 <a href="#/abrechnung">Abrechnung</a>
             </li>
-            <li ng-class="{ active: isActive('/Artikel')}">
+            <li ng-class="{ active: isActive('/artikel')}">
                 <a href="#/artikel">Artikelliste</a>
             </li>
         </ul>
         <div class="navbar-right">
             <p class="navbar-text hidden-xs">{{user}}</p>
             <ul collapse="navCollapsed" class="nav navbar-nav navbar-collapse">
-                <li ng-show="authenticated"><a href="#/logout">Logout <span class="glyphicon glyphicon-log-out"
-                                                                            aria-hidden="true"></span></a></li>
-                <li ng-show="!authenticated"><a href="#/login">Login <span
-                        class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a></li>
+                <li ng-show="authenticated">
+                    <a href="#/logout">
+                        <span class="glyphicon glyphicon-log-out" aria-hidden="true"> Logout</span>
+                    </a>
+                </li>
+                <li ng-show="!authenticated">
+                    <a href="#/login">
+                        <span class="glyphicon glyphicon-log-in" aria-hidden="true"> Login</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
