--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -3,9 +3,17 @@
         <header id="header">
             <h1> Einkaufsliste </h1>
 
-            <form ng-submit="addItem()">
-                <input placeholder="Was soll eingekauft werden?" class="form-control" ng-model="newItem"
-                       ng-disabled="saving" autofocus>
+            <form class="form-horizontal" role="form" ng-submit="addItem()">
+                <div class="form-group">
+                    <div class="col-sm-2">
+                        <input class="form-control" type="number" ng-model="newItem.count" min="1" max="99"/>
+                    </div>
+                   <div class="col-sm-10">
+                       <input placeholder="Was soll eingekauft werden?" class="form-control" ng-model="newItem.name"
+                              ng-disabled="saving" autofocus>
+                   </div>
+                </div>
+                <button type="submit" style="display:none" class="btn btn-success">Submit</button>
             </form>
         </header>
         <section id="main" ng-show="items.length" ng-cloak>
@@ -14,9 +22,8 @@
             <ul id="shopping-list">
                 <li ng-repeat="item in items | filter:statusFilter track by $index">
                     <div class="view" ng-hide="item.editing">
-                        <input class="toggle" type="checkbox" ng-model="item.bought" ng-change="toggleBought(item)">
                         <label ng-class="{ done: item.bought}"
-                               ng-click="toggleBought(item)">{{item.article.name}}</label>
+                               ng-click="toggleBought(item)">{{item.number}} x {{item.article.name}}</label>
                         <div class="pull-right">
                             <button class="invisible-button" ng-click="startEditing(item)">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
@@ -27,8 +34,15 @@
                         </div>
                     </div>
                     <form ng-submit="saveEdits(item, 'submit')" ng-show="item.editing">
-                        <input class="edit" ng-trim="false" ng-model="item.article.name" todo-escape="revertEdits(item)"
-                               ng-blur="saveEdits(item, 'blur')" item-focus="item == editedItem">
+                        <div class="form-group">
+                            <div class="col-sm-2">
+                                <input class="form-control" type="number" ng-model="item.number" min="1" max="99"/>
+                            </div>
+                            <div class="col-sm-10">
+                                <input ng-trim="false" class="form-control" ng-model="item.article.name">
+                            </div>
+                        </div>
+                        <button type="submit" style="display:none" class="btn btn-success">Submit</button>
                     </form>
                 </li>
             </ul>
