--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -7,6 +7,7 @@
     <style>[ng-cloak] {
         display: none;
     }</style>
+    <link rel="SHORTCUT ICON" href="img/fav.ico" type="image/x-icon">
     <link rel="stylesheet" href="style/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/css/shopping.css">
     <script type="text/javascript" src="lib/angular.min.js"></script>
