--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -5,10 +5,10 @@
 
             <form class="form-horizontal" role="form" ng-submit="addItem()">
                 <div class="form-group">
-                    <div class="col-sm-2">
+                    <div class="col-xs-2">
                         <input class="form-control" type="number" ng-model="newItem.count" min="1" max="99"/>
                     </div>
-                   <div class="col-sm-10">
+                   <div class="col-xs-10">
                        <input placeholder="Was soll eingekauft werden?" class="form-control" ng-model="newItem.name"
                               ng-disabled="saving" autofocus>
                    </div>
@@ -35,10 +35,10 @@
                     </div>
                     <form ng-submit="saveEdits(item, 'submit')" ng-show="item.editing">
                         <div class="form-group">
-                            <div class="col-sm-2">
+                            <div class="col-xs-2">
                                 <input class="form-control" type="number" ng-model="item.number" min="1" max="99"/>
                             </div>
-                            <div class="col-sm-10">
+                            <div class="col-xs-10">
                                 <input ng-trim="false" class="form-control" ng-model="item.article.name">
                             </div>
                         </div>
