--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,6 +10,7 @@
     <link rel="SHORTCUT ICON" href="img/fav.ico" type="image/x-icon">
     <link rel="stylesheet" href="style/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/css/shopping.css">
+    <link rel="manifest" href="manifest.json">
     <script type="text/javascript" src="lib/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular-route.min.js"></script>
     <script type="text/javascript" src="lib/angular-touch.min.js"></script>
