--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -14,6 +14,8 @@
     <!--iOS-->
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="img/fav.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="img/fav.ico">
 
     <!--Libraries-->
     <script type="text/javascript" src="lib/angular.min.js"></script>
