--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -1,14 +1,14 @@
-<div class="centered-text col-md-offset-3 col-md-6">
+<div class="centered-text col-sm-offset-3 col-sm-6">
     <section id="shoppingList">
         <header id="header">
             <h1> Einkaufsliste </h1>
 
             <form class="form-horizontal" role="form" ng-submit="addItem()">
                 <div class="form-group">
-                    <div class="col-sm-2 col-xs-3">
+                    <div class="col-xs-3">
                         <input class="form-control" type="number" ng-model="newItem.count" min="1" max="99"/>
                     </div>
-                   <div class="col-sm-10 col-xs-9">
+                   <div class="col-xs-9">
                        <input placeholder="Was soll eingekauft werden?" class="form-control" ng-model="newItem.name"
                               ng-disabled="saving" autofocus>
                    </div>
@@ -35,10 +35,10 @@
                     </div>
                     <form ng-submit="saveEdits(item, 'submit')" ng-show="item.editing">
                         <div class="form-group">
-                            <div class="col-sm-2 col-xs-4">
+                            <div class="col-xs-4">
                                 <input class="form-control" type="number" ng-model="item.number" min="1" max="99"/>
                             </div>
-                            <div class="col-sm-10 col-xs-8">
+                            <div class="col-xs-8">
                                 <input ng-trim="false" class="form-control" ng-model="item.article.name">
                             </div>
                         </div>
