--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -38,7 +38,7 @@
 
     <title>Einkaufsliste</title>
 </head>
-<body ng-controller="navigation as nav">
+<body ng-controller="navigation">
 <navbar class="navbar-default navbar-fixed-top">
     <div class="navbar-inner col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
         <div class="navbar-header">
