init rootScope.authenticated in navigation.js and don't use redirect to login for this

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -39,8 +39,8 @@
     <title>Einkaufsliste</title>
 </head>
 <body ng-controller="navigation">
-<navbar class="navbar-default navbar-fixed-top" ng-include="'navigation/navigation.html'">
-</navbar>
+<div ng-cloak class="navbar navbar-default navbar-fixed-top" ng-include="'navigation/navigation.html'">
+</div>
 <div class="content col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8" ng-view></div>
 </body>
 </html>
