show nav elements only if authenticated

--- a/src/main/resources/public/authentication/login/login.html
+++ b/src/main/resources/public/authentication/login/login.html
@@ -14,6 +14,8 @@
                                                            class="form-control" id="password" name="password"
                                                            ng-model="credentials.password"/>
         </div>
-        <button type="submit" class="btn btn-success">Submit</button>
+        <button type="submit" class="btn btn-success">
+            <span class="glyphicon glyphicon-log-in" aria-hidden="true"> Login</span>
+        </button>
     </form>
 </div>
