--- a/src/main/resources/public/navigation/navigation.html
+++ b/src/main/resources/public/navigation/navigation.html
@@ -1,6 +1,6 @@
 <div class="navbar-inner col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
     <div class="navbar-header">
-        <button type="button" class="navbar-toggle btn navbar-btn" ng-click="toggleNavCollapsed()">
+        <button ng-show="authenticated" type="button" class="navbar-toggle btn navbar-btn" ng-click="toggleNavCollapsed()">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -14,29 +14,30 @@
             </a>
         </div>
     </div>
-    <ul collapse="navCollapsed" class="nav navbar-nav navbar-left navbar-collapse">
-
-        <li ng-class="{ active: isActive('/einkaufsliste')}">
-            <a href="#/einkaufsliste">
-                <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
-            </a>
-        </li>
-        <li ng-class="{ active: isActive('/abrechnung')}">
-            <a href="#/abrechnung">Abrechnung</a>
-        </li>
-        <li ng-class="{ active: isActive('/artikel')}">
-            <a href="#/artikel">Artikelliste</a>
-        </li>
-    </ul>
+    <div ng-show="authenticated">
+        <ul collapse="navCollapsed" class="nav navbar-nav navbar-left navbar-collapse">
+            <li ng-class="{ active: isActive('/einkaufsliste')}">
+                <a href="#/einkaufsliste">
+                    <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
+                </a>
+            </li>
+            <li ng-class="{ active: isActive('/abrechnung')}">
+                <a href="#/abrechnung">Abrechnung</a>
+            </li>
+            <li ng-class="{ active: isActive('/artikel')}">
+                <a href="#/artikel">Artikelliste</a>
+            </li>
+        </ul>
+    </div>
     <div class="navbar-right">
         <p class="navbar-text hidden-xs">{{user}}</p>
-        <ul collapse="navCollapsed" class="nav navbar-nav navbar-collapse">
+        <ul ng-hide="!authenticated && isActive('/login')" collapse="navCollapsed" class="nav navbar-nav navbar-collapse">
             <li ng-show="authenticated">
                 <a href="#/logout">
                     <span class="glyphicon glyphicon-log-out" aria-hidden="true"> Logout</span>
                 </a>
             </li>
-            <li ng-show="!authenticated">
+            <li ng-show="!authenticated && !isActive('/login')">
                 <a href="#/login">
                     <span class="glyphicon glyphicon-log-in" aria-hidden="true"> Login</span>
                 </a>
