refactoring of navigation

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -39,7 +39,7 @@
     <title>Einkaufsliste</title>
 </head>
 <body ng-controller="navigation">
-<div ng-cloak class="navbar navbar-default navbar-fixed-top" ng-include="'navigation/navigation.html'">
+<div class="navbar navbar-default navbar-fixed-top" ng-include="'navigation/navigation.html'">
 </div>
 <div class="content col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8" ng-view></div>
 </body>
