Editing items now in a Modal

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="shoppingList/shoppingList.js"></script>
     <script type="text/javascript" src="articles/articles.js"></script>
     <script type="text/javascript" src="accounting/accounting.js"></script>
+    <script type="text/javascript" src="shoppingList/edit/editItem.js"></script>
 
     <title>Einkaufsliste</title>
 </head>
