reduce modal title

--- a/src/main/resources/public/shoppingList/edit/editItem.html
+++ b/src/main/resources/public/shoppingList/edit/editItem.html
@@ -1,6 +1,6 @@
 <form ng-submit="saveEdits(item, 'submit')">
     <div class="modal-header">
-        <h2 class="modal-title">Einkaufslisten Posten editieren</h2>
+        <h2 class="modal-title">Posten editieren</h2>
     </div>
     <div class="modal-body">
         <label>Anzahl</label>
