Change text of submit-button

--- a/src/main/resources/public/shoppingList/edit/editItem.html
+++ b/src/main/resources/public/shoppingList/edit/editItem.html
@@ -9,7 +9,7 @@
         <input ng-trim="false" class="form-control" ng-model="item.article.name">
     </div>
     <div class="modal-footer">
-        <button type="submit" class="btn btn-success" ng-click="ok()">OK</button>
+        <button type="submit" class="btn btn-success" ng-click="ok()">Speichern</button>
         <button class="btn btn-default" ng-click="cancel()">Abbrechen</button>
     </div>
 </form>
