--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="lib/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular-route.min.js"></script>
     <script type="text/javascript" src="lib/ui-bootstrap-tpls-0.12.1.min.js"></script>
+    <script type="text/javascript" src="lib/angular-resource.min.js"></script>
 
     <!--The App-->
     <script type="text/javascript" src="app.js"></script>
