--- a/src/main/resources/public/shoppingList/edit/editItem.html
+++ b/src/main/resources/public/shoppingList/edit/editItem.html
@@ -1,4 +1,4 @@
-<form ng-submit="saveEdits(item, 'submit')">
+<form ng-submit="ok()">
     <div class="modal-header">
         <h2 class="modal-title">Posten editieren</h2>
     </div>
