--- a/src/main/resources/public/shoppingList/edit/editItem.html
+++ b/src/main/resources/public/shoppingList/edit/editItem.html
@@ -6,7 +6,7 @@
         <label>Anzahl</label>
         <input class="form-control" type="number" ng-model="item.number" min="1" max="99"/>
         <label>Bezeichnung</label>
-        <input ng-trim="false" class="form-control" ng-model="item.article.name">
+        <input ng-trim="false" class="form-control" ng-model="item.embeddedArticle.name">
     </div>
     <div class="modal-footer">
         <button type="submit" class="btn btn-success" ng-click="ok()">Speichern</button>
