--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -23,7 +23,7 @@
                 <li ng-repeat="item in items | filter:statusFilter track by $index">
                     <div class="view">
                         <label ng-class="{done: item.bought}"
-                               ng-click="toggleBought(item)">{{item.number}} x {{item.article.name}}</label>
+                               ng-click="toggleBought(item)">{{item.number}} x {{item.embeddedArticle.name}}</label>
                         <div class="pull-right">
                             <button class="invisible-button" ng-click="startEditing(item)">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
