Created RestCommunicator and HALResource for better communicating with Spring Data Rest

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="authentication/HttpInterceptor.js"></script>
     <script type="text/javascript" src="authentication/authService.js"></script>
+    <script type="text/javascript" src="services/RestCommunicatior.js"></script>
     <script type="text/javascript" src="services/HALResource.js"></script>
     <script type="text/javascript" src="filters/FindByName.js"></script>
     <script type="text/javascript" src="navigation/navigation.js"></script>
