fixed renaming bug

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -28,7 +28,7 @@
     <script type="text/javascript" src="authentication/authService.js"></script>
     <script type="text/javascript" src="services/RestCommunicatior.js"></script>
     <script type="text/javascript" src="services/HALResource.js"></script>
-    <script type="text/javascript" src="filters/FindByName.js"></script>
+    <script type="text/javascript" src="filters/FindByValue.js"></script>
     <script type="text/javascript" src="navigation/navigation.js"></script>
     <script type="text/javascript" src="authentication/login/login.js"></script>
     <script type="text/javascript" src="authentication/logout/logout.js"></script>
