--- a/src/main/resources/public/navigation/navigation.html
+++ b/src/main/resources/public/navigation/navigation.html
@@ -16,15 +16,15 @@
     </div>
     <div ng-show="authenticated">
         <ul collapse="navCollapsed" class="nav navbar-nav navbar-left navbar-collapse">
-            <li ng-class="{ active: isActive('/einkaufsliste')}">
+            <li ng-class="{ active: isSubRouteOf('/einkaufsliste')}">
                 <a href="#/einkaufsliste">
                     <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
                 </a>
             </li>
-            <li ng-class="{ active: isActive('/abrechnung')}">
+            <li ng-class="{ active: isSubRouteOf('/abrechnung')}">
                 <a href="#/abrechnung">Abrechnung</a>
             </li>
-            <li ng-class="{ active: isActive('/artikel')}">
+            <li ng-class="{ active: isSubRouteOf('/artikel')}">
                 <a href="#/artikel">Artikelliste</a>
             </li>
         </ul>
