--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -1,6 +1,6 @@
 <div class="centered-text col-sm-offset-3 col-sm-6">
     <section id="shoppingList">
-        <header id="header">
+        <header class="framed shadowed box" id="header">
             <h1> Einkaufsliste </h1>
 
             <form class="form-horizontal" role="form" ng-submit="addItem()">
@@ -8,22 +8,21 @@
                     <div class="col-xs-3">
                         <input class="form-control" type="number" ng-model="newItem.count" min="1" max="99"/>
                     </div>
-                   <div class="col-xs-9">
-                       <input placeholder="Was soll eingekauft werden?" class="form-control" ng-model="newItem.name"
-                              ng-disabled="saving" autofocus>
-                   </div>
+                    <div class="col-xs-9">
+                        <input placeholder="Was soll eingekauft werden?" class="form-control" ng-model="newItem.name"
+                               ng-disabled="saving" autofocus>
+                    </div>
                 </div>
                 <button type="submit" style="display:none" class="btn btn-success">Submit</button>
             </form>
         </header>
         <section id="main" ng-show="items.length" ng-cloak>
-            <input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
-            <label for="toggle-all">Alle</label>
             <ul id="shopping-list">
-                <li ng-repeat="item in items | filter:statusFilter track by $index">
+                <li class="framed shadowed box" ng-class="{ 'light-green': !item.bought}" ng-click="toggleBought(item)"
+                    ng-repeat="item in items | filter:statusFilter track by $index">
                     <div class="view">
-                        <label ng-class="{done: item.bought}"
-                               ng-click="toggleBought(item)">{{item.number}} x {{item.embeddedArticle.name}}</label>
+                        <label ng-class="{done: item.bought}">{{item.number}} x {{item.embeddedArticle.name}}</label>
+
                         <div class="pull-right">
                             <button class="invisible-button" ng-click="startEditing(item)">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
@@ -36,22 +35,26 @@
                 </li>
             </ul>
         </section>
-        <footer id="footer" ng-show="items.length" ng-cloak>
+        <footer id="footer" class="framed shadowed box" ng-show="items.length" ng-cloak>
             <span id="item-count"><strong>{{remainingCount}}</strong>
                 <ng-pluralize count="remainingCount"
                               when="{ one:'Eintrag übrig', other:'Einträge übrig' }"></ng-pluralize>
             </span>
-            <ul id="filters">
-                <li>
-                    <a ng-class="{selected: status == ''} " href="#/einkaufsliste">Alle</a>
-                </li>
-                <li>
-                    <a ng-class="{selected: status == 'toBuy'}" href="#/einkaufsliste/verbleibend">Verbleibend</a>
-                </li>
-                <li>
-                    <a ng-class="{selected: status == 'bought'}" href="#/einkaufsliste/gekauft">Gekauft</a>
-                </li>
-            </ul>
+            <input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
+            <label for="toggle-all">Alle</label>
+            <nav>
+                <ul class="pagination" id="filters">
+                    <li ng-class="{ active: isActive('/einkaufsliste')}">
+                        <a href="#/einkaufsliste">Alle</a>
+                    </li>
+                    <li ng-class="{ active: isActive('/einkaufsliste/verbleibend')}">
+                        <a ng-class="{selected: status == 'toBuy'}" href="#/einkaufsliste/verbleibend">Verbleibend</a>
+                    </li>
+                    <li ng-class="{ active: isActive('/einkaufsliste/gekauft')}">
+                        <a ng-class="{selected: status == 'bought'}" href="#/einkaufsliste/gekauft">Gekauft</a>
+                    </li>
+                </ul>
+            </nav>
         </footer>
     </section>
     <footer id="info">
