updated customized bootstrap

--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -13,7 +13,7 @@
                                ng-disabled="saving" autofocus>
                     </div>
                 </div>
-                <button type="submit" style="display:none" class="btn btn-success">Submit</button>
+                <input type="submit" style="display:none">
             </form>
         </header>
         <section id="main" ng-show="items.length" ng-cloak>
