test hiding submit input in an ugly way because iOS doens't submit when hiding

--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -13,7 +13,7 @@
                                ng-disabled="saving" autofocus>
                     </div>
                 </div>
-                <input type="submit" style="display:none">
+                <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>
             </form>
         </header>
         <section id="main" ng-show="items.length" ng-cloak>
