--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -18,19 +18,18 @@
         </header>
         <section id="main" ng-show="items.length" ng-cloak>
             <ul id="shopping-list">
-                <li class="framed shadowed box" ng-class="{ 'light-green': !item.bought}" ng-click="toggleBought(item)"
+                <li class="framed shadowed box" ng-class="{ 'light-green': !item.bought}"
                     ng-repeat="item in items | filter:statusFilter track by $index">
-                    <div class="view">
-                        <label ng-class="{done: item.bought}">{{item.number}} x {{item.embeddedArticle.name}}</label>
-
-                        <div class="pull-right">
-                            <button class="invisible-button" ng-click="startEditing(item)">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            </button>
-                            <button class="invisible-button" ng-click="removeItem(item)">
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                            </button>
-                        </div>
+                    <label ng-click="toggleBought(item)" class="col-xs-10" ng-class="{done: item.bought}">
+                        {{item.number}} x {{item.embeddedArticle.name}}
+                    </label>
+                    <div>
+                        <button class="invisible-button" ng-click="startEditing(item)">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </button>
+                        <button class="invisible-button" ng-click="removeItem(item)">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </button>
                     </div>
                 </li>
             </ul>
