--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -20,10 +20,10 @@
             <ul id="shopping-list">
                 <li class="framed shadowed box" ng-class="{ 'light-green': !item.bought}"
                     ng-repeat="item in items | filter:statusFilter track by $index">
-                    <label ng-click="toggleBought(item)" class="col-xs-10" ng-class="{done: item.bought}">
+                    <label ng-click="toggleBought(item)" class="col-xs-9 col-sm-10" ng-class="{done: item.bought}">
                         {{item.number}} x {{item.embeddedArticle.name}}
                     </label>
-                    <div>
+                    <div class="pull-right">
                         <button class="invisible-button" ng-click="startEditing(item)">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </button>
