--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -23,7 +23,7 @@
                     <label ng-click="toggleBought(item)" class="col-xs-9 col-sm-10" ng-class="{done: item.bought}">
                         {{item.number}} x {{item.embeddedArticle.name}}
                     </label>
-                    <div class="pull-right">
+                    <div>
                         <button class="invisible-button" ng-click="startEditing(item)">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </button>
