--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -20,16 +20,20 @@
             <ul id="shopping-list">
                 <li class="framed shadowed box" ng-class="{ 'light-green': !item.bought}"
                     ng-repeat="item in items | filter:statusFilter track by $index">
-                    <label ng-click="toggleBought(item)" class="col-xs-9 col-sm-10" ng-class="{done: item.bought}">
-                        {{item.number}} x {{item.embeddedArticle.name}}
-                    </label>
-                    <div>
-                        <button class="invisible-button" ng-click="startEditing(item)">
-                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                        </button>
-                        <button class="invisible-button" ng-click="removeItem(item)">
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                        </button>
+                    <div class="item-view">
+                        <div ng-click="toggleBought(item)" class="col-xs-8 col-sm-10">
+                            <label ng-class="{done: item.bought}">
+                                {{item.number}} x {{item.embeddedArticle.name}}
+                            </label>
+                        </div>
+                        <div class="pull-right">
+                            <button class="invisible" ng-click="startEditing(item)">
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </button>
+                            <button class="invisible" ng-click="removeItem(item)">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </button>
+                        </div>
                     </div>
                 </li>
             </ul>
