--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -27,10 +27,10 @@
                             </label>
                         </div>
                         <div class="pull-right">
-                            <button class="invisible" ng-click="startEditing(item)">
+                            <button class="invisible-button" ng-click="startEditing(item)">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </button>
-                            <button class="invisible" ng-click="removeItem(item)">
+                            <button class="invisible-button" ng-click="removeItem(item)">
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                             </button>
                         </div>
