--- a/src/main/resources/public/shoppingList/shoppingList.html
+++ b/src/main/resources/public/shoppingList/shoppingList.html
@@ -18,22 +18,20 @@
         </header>
         <section id="main" ng-show="items.length" ng-cloak>
             <ul id="shopping-list">
-                <li class="framed shadowed box" ng-class="{ 'light-green': !item.bought}"
-                    ng-repeat="item in items | filter:statusFilter track by $index">
-                    <div class="item-view">
-                        <div ng-click="toggleBought(item)" class="col-xs-8 col-sm-10">
-                            <label ng-class="{done: item.bought}">
-                                {{item.number}} x {{item.embeddedArticle.name}}
-                            </label>
-                        </div>
-                        <div class="pull-right">
-                            <button class="invisible-button" ng-click="startEditing(item)">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            </button>
-                            <button class="invisible-button" ng-click="removeItem(item)">
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                            </button>
-                        </div>
+                <li class="framed box" ng-repeat="item in items | filter:statusFilter track by $index"
+                    ng-class="{ 'to-buy': !item.bought, 'shadowed-high': !item.bought, 'shadowed-low' : item.bought}">
+                    <div class="item-view col-xs-8 col-sm-10" ng-click="toggleBought(item)">
+                        <label ng-class="{bought: item.bought}">
+                            {{item.number}} x {{item.embeddedArticle.name}}
+                        </label>
+                    </div>
+                    <div class="options">
+                        <button class="invisible-button" ng-hide="item.bought" ng-click="startEditing(item)">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </button>
+                        <button class="invisible-button" ng-click="removeItem(item)">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </button>
                     </div>
                 </li>
             </ul>
